[gd_scene load_steps=7 format=2]

[ext_resource path="res://hsz/weapons/millet/millet.gd" type="Script" id=1]
[ext_resource path="res://hsz/weapons/millet/millet.png" type="Texture" id=2]
[ext_resource path="res://hsz/utils/hurtbox.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="Animation" id=3]
resource_name = "Default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Disappear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Millet" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 1 )

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Default"
anims/Default = SubResource( 3 )
anims/Disappear = SubResource( 2 )

[connection signal="hurt" from="Hurtbox" to="." method="_on_Hurtbox_hurt"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]
